add some comments changed the way we get the class name to avoid depreciation